# texture-loader

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  cmake_configure_vs17_oiio.cmd.example  create_test_images.cmd  run_oiio_example.cmd
cmake/: FindHIP.cmake
docs/: ImageSource.md  improvements.md
examples/: async_vs_sync.cpp  atlas_render.cpp  atlas_render_kernel.hip  benchmark_kernel.hip  benchmark_suite.cpp  mega_texture_kernel.hip  mega_texture_render.cpp  oiio_formats.cpp  path_tracing.cpp  path_tracing_kernel.hip  simple_render.cpp  simple_render_kernel.hip  streaming_scene.cpp  streaming_scene_kernel.hip  tiled_render.cpp  tiled_render_kernel.hip
include/: DemandTextureLoader.h  TextureSampling.h
include/DemandLoading/: DemandTextureLoader.h  DeviceContext.h  Logging.h  TextureSampling.h  Ticket.h
include/ImageSource/: ImageSource.h  OIIOReader.h  TextureInfo.h
src/: DemandTextureLoader.cpp  ImageReader.cpp
src/DemandLoading/: DemandTextureLoader.cpp  DemandTextureLoaderImpl.cpp  DemandTextureLoaderImpl.h  Logging.cpp  Ticket.cpp  stb_image_impl.cpp
src/DemandLoading/Internal/: HipEventPool.h  PinnedMemoryPool.h  TextureMetadata.h  ThreadPool.h  Utils.h
src/ImageSource/: OIIOReader.cpp
test_images/: checker.exr  gradient.exr  gradient.hdr  gradient_16bit.tif  hdr_bright.exr
tests/: DemandTextureLoaderTests.cpp  MemoryPoolTests.cpp  TestUtils.h  TextureInfoTests.cpp  ThreadPoolTests.cpp  TicketTests.cpp  main.cpp
